--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Created by https://www.gitignore.io/api/cmake,visualstudio
 # Edit at https://www.gitignore.io/?templates=cmake,visualstudio
 
+out/
 ### CMake ###
 CMakeLists.txt.user
 CMakeCache.txt
